--- a/master.css
+++ b/master.css
@@ -2,13 +2,20 @@
 body{
   font-family: 'Montserrat', sans-serif;
 }
-.bad-capital{
+.toggle{
   cursor: pointer;
   color: #00ccff;
 }
-.bad-capital:hover{
+.toggle:hover{
   text-decoration: underline;
 }
+.dash{
+  cursor: pointer;
+  color: #00ccff;
+}
 .capital-correct{
+  display: none;
+}
+.this-dash{
   display: none;
 }
